--- a/index.html
+++ b/index.html
@@ -9,7 +9,34 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-   
+    <div class="main-screen1">
+        <header><span>BuzzQuizz</span></header>
+        <main>
+            <div class="quizzes-usuario">
+                <div><span>Você não criou nenhum<br>quizz ainda :(</span></div>
+                <div></div><button class="criar-quizz-btn"><span>Criar Quizz</span></button>
+            </div>
+            <div class="quizzes-servidor">
+                <div><span>Todos os quizzes</span></div>
+                <div class="quizz-container"></div>
+            </div>
+        </main> 
+    </div>
+    <div class="main-screen2 escondido">
+        <header><span>BuzzQuizz</span></header>
+        <main>
+            <div class="quizzes-usuario">
+                <div><span>Você não criou nenhum<br>quizz ainda :(</span></div>
+                <div></div><button class="criar-quizz-btn"><span>Criar Quizz</span></button>
+            </div>
+            <div class="quizzes-servidor">
+                <div><span>Todos os quizzes</span></div>
+                <div class="quizz-container"></div>
+            </div>
+        </main>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
