--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <div class="main-screen1">
         <header><span>BuzzQuizz</span></header>
         <main>
-            <div class="quizzes-usuario">
+            <div class="quizzes-usuario-vazio">
                 <div><span>Você não criou nenhum<br>quizz ainda :(</span></div>
-                <div></div><button class="criar-quizz-btn"><span>Criar Quizz</span></button>
+                <button class="criar-quizz-btn"><span>Criar Quizz</span></button>
             </div>
             <div class="quizzes-servidor">
                 <div><span>Todos os quizzes</span></div>
@@ -26,16 +26,23 @@
         <header><span>BuzzQuizz</span></header>
         <main>
             <div class="quizzes-usuario">
-                <div><span>Você não criou nenhum<br>quizz ainda :(</span></div>
-                <div></div><button class="criar-quizz-btn"><span>Criar Quizz</span></button>
+                <div class="titulo-secao">
+                    <div><span>Seus quizzes</span></div>
+                    <div class="ion-icon"><ion-icon name="add-circle"></ion-icon></div>
+                </div>
+                <div class="container-usuario">
+                    <div class="capa-Quizz"><div class="image-Quizz"><img src="https://i.ytimg.com/vi/SB-qEYVdvXA/mqdefault.jpg"></div><div class="titulo-Quizz">Placeholder Usuario Quizz</div></div>
+                    <div class="capa-Quizz"><div class="image-Quizz"><img src="https://i.ytimg.com/vi/SB-qEYVdvXA/mqdefault.jpg"></div><div class="titulo-Quizz">Placeholder Usuario Quizz</div></div>
+                </div>
             </div>
-            <div class="quizzes-servidor">
+            <div class="quizzes-servidor-2">
                 <div><span>Todos os quizzes</span></div>
                 <div class="quizz-container"></div>
             </div>
         </main>
     </div>
 
+    <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="js/main.js"></script>
 </body>
