Criação do Quizz: Níveis do quizz

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </main>
     </div>
     <div class="main-screen3">
-        <div class="main-screen3-1">
+        <div class="main-screen3-1 ">
             <span class="screen3-title">Comece pelo começo</span>
             <form onsubmit="return false">
                 <div class="card-forms">
@@ -60,7 +60,9 @@
             </form>
         </div>
         <div class="main-screen3-3 escondido">
-            <span>Agora, decida os níveis</span>
+            <span class="screen3-title">Agora, decida os níveis</span>
+            <form onsubmit="return false">
+            </form>
         </div>
         <div class="main-screen-end escondido">
             <span>Seu quizz está pronto!</span>
