--- a/index.html
+++ b/index.html
@@ -10,21 +10,13 @@
 </head>
 <body>
     <header><span>BuzzQuizz</span></header>
-    <div class="main-screen1 escondido">
+    <div class="main-screen1">
         <main>
             <div class="quizzes-usuario-vazio">
                 <div><span>Você não criou nenhum<br>quizz ainda :(</span></div>
                 <button class="criar-quizz-btn" onclick="criarQuizz()"><span>Criar Quizz</span></button>
             </div>
-            <div class="quizzes-servidor">
-                <div><span>Todos os quizzes</span></div>
-                <div class="quizz-container"></div>
-            </div>
-        </main> 
-    </div>
-    <div class="main-screen2 escondido">
-        <main>
-            <div class="quizzes-usuario">
+            <div class="quizzes-usuario escondido">
                 <div class="titulo-secao">
                     <div><span>Seus quizzes</span></div>
                     <div class="ion-icon"><ion-icon name="add-circle"></ion-icon></div>
@@ -34,14 +26,19 @@
                     <div class="capa-Quizz"><div class="image-Quizz"><img src="https://i.ytimg.com/vi/SB-qEYVdvXA/mqdefault.jpg"></div><div class="titulo-Quizz">Placeholder Usuario Quizz</div></div>
                 </div>
             </div>
-            <div class="quizzes-servidor-2">
+            <div class="quizzes-servidor">
                 <div><span>Todos os quizzes</span></div>
                 <div class="quizz-container"></div>
             </div>
-        </main>
+        </main> 
     </div>
-    <div class="main-screen3">
-        <div class="main-screen3-1 ">
+    <div class="pagina-quizz escondido">
+        <header><span>BuzzQuizz</span></header>
+        <div class="container-perguntas"></div>
+        
+    </div>
+    <div class="main-screen3 escondido">
+        <div class="main-screen3-1 escondido">
             <span class="screen3-title">Comece pelo começo</span>
             <form onsubmit="return false">
                 <div class="card-forms">
