Quizzes do Usuário: Armazenar quizzes do usuário

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header><span>BuzzQuizz</span></header>
-    <div class="main-screen1">
+    <div class="main-screen1 escondido">
         <main>
             <div class="quizzes-usuario-vazio">
                 <div><span>Você não criou nenhum<br>quizz ainda :(</span></div>
@@ -37,8 +37,8 @@
         <div class="container-perguntas"></div>
         
     </div>
-    <div class="main-screen3 escondido">
-        <div class="main-screen3-1 escondido">
+    <div class="main-screen3">
+        <div class="main-screen3-1">
             <span class="screen3-title">Comece pelo começo</span>
             <form onsubmit="return false">
                 <div class="card-forms">
