--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header><span>BuzzQuizz</span></header>
-    <div class="main-screen1 escondido">
+    <div class="main-screen1 ">
         <main>
             <div class="quizzes-usuario-vazio">
                 <div><span>Você não criou nenhum<br>quizz ainda :(</span></div>
@@ -38,7 +38,7 @@
         
     </div>
     <div class="main-screen3">
-        <div class="main-screen3-1">
+        <div class="main-screen3-1 escondido">
             <span class="screen3-title">Comece pelo começo</span>
             <form onsubmit="return false">
                 <div class="card-forms">
@@ -61,8 +61,9 @@
             <form onsubmit="return false">
             </form>
         </div>
-        <div class="main-screen-end escondido">
-            <span>Seu quizz está pronto!</span>
+        <div class="main-screen3-end escondido">
+            <span class="screen3-title title-fim">Seu quizz está pronto!</span>
+            <div class="foto-quizz"></div>
         </div>
     </div>
 
