Botão de navegação "Criar Quizz"

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="quizzes-usuario escondido">
                 <div class="titulo-secao">
                     <div><span>Seus quizzes</span></div>
-                    <div class="ion-icon"><ion-icon name="add-circle"></ion-icon></div>
+                    <div class="ion-icon" onclick="criarQuizz()"><ion-icon name="add-circle"></ion-icon></div>
                 </div>
                 <div class="container-usuario">
                     <div class="capa-Quizz"><div class="image-Quizz"><img src="https://i.ytimg.com/vi/SB-qEYVdvXA/mqdefault.jpg"></div><div class="titulo-Quizz">Placeholder Usuario Quizz</div></div>
