pequenos ajustes no layout

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="container-perguntas"></div>
         
     </div>
-    <div class="main-screen3">
+    <div class="main-screen3 escondido">
         <div class="main-screen3-1 escondido">
             <span class="screen3-title">Comece pelo começo</span>
             <form onsubmit="return false">
